# MyEducation

Java/HSchildt/: README_Rus.txt
Java/HSchildt/Chapter 1-2/: Echo.java  Example.java  Example2.java  GalToLit.java  GalToLitTable.java  Inches.java  Lightning.java  LogicOpTable.java  Weight.java  primeNumbers.java
Java/HSchildt/Chapter 10/: CompareFiles.java  File2.txt  FileCopyDemo.java  FileFromCopy.txt  FileHelp.java  FileToCopy.txt  IOHelp.txt  TryFileFromCopy.txt  TryFileToCopy.txt
Java/HSchildt/Chapter 11/: ExtendsThread.java  QDemo.java  ThreadCom.java  UseMain.java
Java/HSchildt/Chapter 11/qpack/: Queue.java  QueueCycle.java  (+3 more)
Java/HSchildt/Chapter 12/: EnumDemo.java  TrafficLightDemo.java
Java/HSchildt/Chapter 3/: England_message.java  Help.java  Help2.java  Help3.java  Read_point.java
Java/HSchildt/Chapter 4/: HelpClassMain.java
Java/HSchildt/Chapter 5/: BubbleSort.java  Encode.java  MinMax.java  QDemo.java  ShiftDemo.java  ShowBitsDemo.java  ShowBitsDemoShildt.java  StringBubbleSort.java
Java/HSchildt/Chapter 6/: QDemo.java  SDemo.java  SortingDemo.java  bababa.java
Java/HSchildt/Chapter 7/: CircleDemo.java  VehicleTest.java
Java/HSchildt/Chapter 8/: QDemo.java
University/BaseAlgorithmsCPP/: Arrays_processing.cpp  CMakeLists.txt  InserSorting.cpp  List.cpp  SelectionSort.cpp  algs.cpp  binarySearch.cpp  bubbleSort.cpp  countingSort.cpp  encrypt.cpp  hanoi.cpp  mergeSort.cpp  string.cpp  structNode.cpp
University/ML_LabWork/: README_Rus.txt
University/ML_LabWork/ЛР1/: LabWork1.ipynb
University/ML_LabWork/ЛР2/: LabWork2.ipynb
(+8 files in other folders)
